[package]
name = "ads1115"
description = "Generic Rust driver for the ADS1115 Analog/Digital Converter built on top of embedded-hal."
version = "0.1.0"
authors = ["Mitch Labrenz <mitchslabrenz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.2"

[dependencies.embedded-hal]
version = "0.2"
features = ["unproven"]
