[package]
authors = ["Mitch Labrenz <mitchslabrenz@gmail.com>"]
description = "Generic Rust driver for the ADS1115 Analog/Digital Converter built on top of embedded-hal."
edition = "2018"
name = "ads1115"
version = "0.1.0"
[dependencies]
embedded-hal = {version = "0.2", features = ["unproven"]}

[features]
default = []
direct-access = []
